...
    })();

    return () => sub();
  }, []);

  return (
    <View style={styles.topBar} testID="topbar">
      {icons.map(({icon, link, style}, i) => (
        <Link key={i} to={link} component={TouchableOpacity}>
          <FontAwesomeIcon
            icon={icon}
            size={26}
            style={
...
