...
          ...styles.container,
          ...styles.flexContainer,
          ...styles.fixes,
        }}>
        <View>
          <Image
            testID="setup-img"
            style={styles.avatar}
            source={{uri: previewImage.img}}
          />

          <View style={styles.cropView}>
            <TouchableOpacity onPress={() => cropImg()}>
...
